# foodbot

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_baseline_full_schema.py  0002_seed_reference_data.py  0003_create_bot_fsm_states.py  0004_add_profile_diet_goal.py
bot/: __init__.py  config.py  main.py
bot/db/: __init__.py  bootstrap.py  dml.py  health.py  models.py  session.py
bot/fsm/: __init__.py  flow.py  states.py  storage.py
bot/handlers/: __init__.py  registration.py
bot/keyboards/: __init__.py  registration.py
bot/repositories/: __init__.py  cuisines_repository.py  event_log_repository.py  notification_settings_repository.py  profile_repository.py  restrictions_repository.py  user_repository.py
bot/services/: __init__.py  dto.py  registration_service.py
bot/utils/: __init__.py  validators.py
db/: README.md  full_schema.sql  seed_reference_data.sql
tests/integration/: test_registration_service_integration.py
tests/smoke/: test_onboarding_smoke.py
tests/unit/: test_dto.py  test_flow.py  test_validators.py
